# jmcomic-qqbot

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: docker-image.yml
backend/: download_worker.py  downloader.py  main.py  models.py  search_worker.py  task_manager.py
bot/: backend_client.py  main.py  message_parser.py  napcat_client.py
config/: jmcomic-option.yml.example
lang/: zh_CN.json
scripts/: install.sh
tests/: test_backend_tasks.py  test_bot_flow.py  test_message_parser.py
